fixed placements on small screens

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,10 @@ div.flash {
      
     }
 
+    .header {
+        margin-top: -80px;
+    }
+
     .header h1 {
         font-size: 25px;
         margin-top: 20px;
